package W02.task3;

import W02.task3.Matrix.Pos;

public interface Linable {

    public void setPos(Pos pos);

    public Pos getPos();

    public int getValue();

}